Added `-Djava.security.manager=allow` to all script files used for running Robocode.